--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
     <body>
         <section class="navigation">
@@ -24,7 +24,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="/about">About</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#skills">Skills</a>
@@ -158,7 +158,7 @@
             </p>
             <p>
                 <i class="fas fa-envelope"></i>
-                my_email@email.com
+                benjicoopss@gmail.com
             </p>
         </section>
         <section class="footer">
