--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,13 @@
                   <div class="collapse navbar-collapse" id="navbarContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                        <a class="nav-link" href="{{ url_for('about') }}">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link" href="{{ url_for('index') }}#skills">Skills</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,10 +41,10 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="{{ url_for('index') }}#contact">Contact</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Add Project</a>
+                        <a class="nav-link" href="{{ url_for('create') }}">Add Project</a>
                       </li>
                     </ul>
                   </div>
