--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,18 +2,15 @@
 
 {% block content %}
 <section class="header">
-    <h1>Python Title</h1>
-    <p>Jan 2021</p>
-    <a href="#" class="github-btn">
+    <h1>{{project.title}}</h1>
+    <p>{{project.date}}</p>
+    <a href="{{project.ghlink}}" class="github-btn">
         <i class="fab fa-github"></i>
         View on GitHub
     </a>
     <ul class="project-skills">
         <div>
-            <li>Catching exceptions</li>
-            <li>Creating a loop</li>
-            <li>Accepting user input</li>
-            <li>Conditional statements</li>
+            <li>{{project.skills}}</li>
         </div>
     </ul>
 </section>
@@ -21,10 +18,7 @@
     <div id="triangle5"></div>
     <h2>Description</h2>
     <p>
-        Lemon drops muffin macaroon pastry sweet muffin soufflé. 
-        Chocolate cake sesame snaps gummi bears tiramisu toffee. 
-        Ice cream toffee marshmallow sugar plum croissant chupa chups powder. 
-        Cotton candy sweet caramels pastry candy.
+        {{project.descrip}}
     </p>
     <div id="triangle6"></div>
 </section>
