--- a/templates/index.html
+++ b/templates/index.html
@@ -35,68 +35,22 @@
     <i class="fas fa-file-code"></i>
     <h2>Projects</h2>
     <div id="project-list">
-        <div id="project1" class="a-project">
-            <h3>Project Title</h3>
-            <a href="#" class="github-btn">
-                <i class="fab fa-github"></i>
-                View on GitHub
-            </a>
-            <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-            <p>
-                Skills: Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-        </div>
-        <div id="project2" class="a-project">
-            <h3>Project Title</h3>
-            <a href="#" class="github-btn">
-                <i class="fab fa-github"></i>
-                View on GitHub
-            </a>
-            <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-            <p>
-                Skills: Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-        </div>
-        <div id="project3" class="a-project">
-            <h3>Project Title</h3>
-            <a href="#" class="github-btn">
-                <i class="fab fa-github"></i>
-                View on GitHub
-            </a>
-            <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-            <p>
-                Skills: Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-        </div>
-        <div id="project4" class="a-project">
-            <h3>Project Title</h3>
-            <a href="#" class="github-btn">
-                <i class="fab fa-github"></i>
-                View on GitHub
-            </a>
-            <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-            <p>
-                Skills: Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-            </p>
-        </div>
-    </div>
-    <div id="triangle4"></div>
+    {% for project in projects %}
+            <div id="{{project.id}}" class="a-project">
+                <h3>{{project.title}}</h3>
+                <a href="{{project.ghlink}}" class="github-btn">
+                    <i class="fab fa-github"></i>
+                    View on GitHub
+                </a>
+                <p>
+                   {{project.descrip}}
+                </p>
+                <p>
+                    {{project.skills}}
+                </p>
+            </div>
+        <div id="triangle4"></div>
+    {% endfor %}
 </section>
 <section id="contact">
     <i class="fas fa-paper-plane"></i>
