--- a/templates/detail.html
+++ b/templates/detail.html
@@ -10,7 +10,9 @@
     </a>
     <ul class="project-skills">
         <div>
-            <li>{{project.skills}}</li>
+            {% for skill in project.skills %}
+                <li>{{ skill.strip() }}</li>
+            {% endfor %}
         </div>
     </ul>
 </section>
