--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <div id="project-list">
     {% for project in projects %}
             <div id="{{project.id}}" class="a-project">
-                <h3>{{project.title}}</h3>
+                <h3><a href="{{ url_for('detail', id=project.id)}}">{{project.title}}</h3>
                 <a href="{{project.ghlink}}" class="github-btn">
                     <i class="fab fa-github"></i>
                     View on GitHub
