--- a/templates/detail.html
+++ b/templates/detail.html
@@ -25,11 +25,11 @@
     <div id="triangle6"></div>
 </section>
 <section id="edit-delete">
-    <a href="#">
+    <a href="{{ url_for('edit', id=project.id) }}">
         <i class="fas fa-edit"></i>
         Edit
     </a>
-    <a href="#">
+    <a href="{{ url_for('delete', id=project.id) }}">
         <i class="far fa-trash-alt"></i>
         Delete
     </a>
