--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
         <section class="navigation">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Student Name</a>
+                  <a class="navbar-brand" href="{{ url_for('index') }}">Student Name</a>
                   <button class="toggle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                   </button>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="{{ url_for('index') }}#skills">Skills</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="{{ url_for('index') }}#project" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -51,8 +51,6 @@
                 </div>
             </nav>
         </section>
-        {% block button %}
-        {% endblock %}
         {% block content %}
         {% endblock %}
         <section class="footer">
