--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,7 +4,7 @@
 <section class="header">
     <h1>{{project.title}}</h1>
     <p>{{project.date}}</p>
-    <a href="{{project.ghlink}}" class="github-btn">
+    <a href="{{project.ghlink}}" class="github-btn" target="_blank">
         <i class="fab fa-github"></i>
         View on GitHub
     </a>
