--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     {% for project in projects %}
             <div id="{{project.id}}" class="a-project">
                 <h3><a href="{{ url_for('detail', id=project.id)}}">{{project.title}}</h3>
-                <a href="{{project.ghlink}}" class="github-btn">
+                <a href="{{project.ghlink}}" class="github-btn" target="_blank">
                     <i class="fab fa-github"></i>
                     View on GitHub
                 </a>
