--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,13 +59,13 @@
                 <a href="">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/benjicoopz?tab=repositories" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="">
