trying to add pic

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {% block content %}       
 <section class="header">
     <h1>Python Developer</h1>
-    <p>A short one-liner about your love of coding.</p>
-    <img src="https://cdn.pixabay.com/photo/2016/11/29/13/14/attractive-1869761_1280.jpg" alt="Headshot of myself">
+    <p> Where code readability meets powerful functionality.</p>
+    <img src="/img/bigpic.jpg" alt="Headshot of myself">
 </section>
 <section id="about">
     <h2>About Me</h2>
