--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <section class="header">
     <h1>Python Developer</h1>
     <p> Where code readability meets powerful functionality.</p>
-    <img src="/img/bigpic.jpg" alt="Headshot of myself">
+    <img src="../static/img/bigpic.jpg" alt="Headshot of myself">
 </section>
 <section id="about">
     <h2>About Me</h2>
@@ -28,6 +28,7 @@
         <li>SQLAlchemy</li>
         <li>GitHub</li>
         <li>Visual Studio Code</li>
+        <li>Tiny Amount of HTML</li>
     </ul>
 </section>
 <section id="projects">
