--- a/templates/about.html
+++ b/templates/about.html
@@ -4,37 +4,24 @@
 <section class="header">
     <h1>Benjamin Cooper</h1>
     <p>Future Developer for YOUR Company</p>
-    <!--I would suggest choosing a different picture here.-->
-    <!--Like maybe a hobby photo-->
     <img src="../static/img/me&mygirl.jpg" alt="Headshot of myself">
 </section>
 <section id="about-page">
     <div id="triangle7"></div>
     <div id="triangle8"></div>
-    <h2>Section Title</h2>
+    <h2>A Little About Ben</h2>
     <p>
-        Soufflé cupcake cupcake. 
-        Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-        Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-        Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-        Muffin sweet roll bonbon. 
-        Carrot cake gummies cheesecake. 
-        Gummi bears powder apple pie. 
-        Topping cake powder. 
-        Pastry chupa chups caramels.
+    This picture is of me and my gorgeous girlfriend, Brinkley. We have a mini Australian Shepherd, named Cash, and 3 cats; Scarlet, Skadi and Winnie. My girlfriend and I love to travel; the picture above is us in the Smoky Mountains!
+    We also love to be lazy: watching TV shows (we just finished GoT), playing video games, and of course, napping with all our animals.
     </p>
     <p>
-        Soufflé cupcake cupcake. 
-        Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-        Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-        Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-        Muffin sweet roll bonbon. 
-        Carrot cake gummies cheesecake. 
-        Gummi bears powder apple pie. 
-        Topping cake powder. 
-        Pastry chupa chups caramels.
+    But enough about me, let's talk Python. It really all started when I was taking an Enneagram test for this insurance job I applied for.
+    I was denied for the insurance job because my 'type' wasn't the right fit for the agency, but this was actually a blessing in disguise as it opened my eyes to what I really wanted to do.
+    My journey began in August, I started Treehouse and fell in love with Python. It was very easy to read and the videos Treehouse made were very high quality.
+    Over the next few months I would juggle working on the Python TechDegree, my part-time Pharmacy Tech job at WalMart, and making time for family.
+    I went from having no coding experience to having my own portfolio in a matter of months!
     </p>
-    <a href="#"><i class="far fa-file"></i>Resume</a>
+    <a href="https://www.linkedin.com/in/benjamin-cooper-50aa6522b/" target="_blank"><i class="far fa-file"></i>Resume</a>
 </section>
 {% endblock %}        
     
