--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,9 @@
 <section id="about">
     <h2>About Me</h2>
     <p>
-        Pastry wafer chocolate cake caramels. 
-        Gummi bears pudding sugar plum macaroon. 
-        Cake tart apple pie soufflé sweet sweet. 
-        Topping bear claw lemon drops gingerbread 
-        biscuit pudding fruitcake icing chocolate bar.
+        This portfolio is a culmination of everything I've learned over the past few months.
+        Please, take your time, enjoy the beautiful front-end courtesy of Treehouse, have a look at my projects,
+        and join me on my code adventure!
     </p>
     <div id="triangle1"></div>
     <div id="triangle2"></div>
@@ -28,7 +26,7 @@
         <li>SQLAlchemy</li>
         <li>GitHub</li>
         <li>Visual Studio Code</li>
-        <li>Tiny Amount of HTML</li>
+        <li>Very Basic HTML</li>
     </ul>
 </section>
 <section id="projects">
@@ -57,10 +55,7 @@
     <i class="fas fa-paper-plane"></i>
     <h2>Contact Me</h2>
     <p>
-        Pastry wafer chocolate cake caramels. 
-        Gummi bears pudding sugar plum macaroon. 
-        Cake tart apple pie soufflé sweet sweet. 
-        Topping bear claw lemon drops gingerbread biscuit pudding fruitcake icing chocolate bar.
+        If anything on this portfolio impressed you, please feel free to email me at the address below or click on the LinkedIn icon below and message me!
     </p>
     <p>
         <i class="fas fa-envelope"></i>
