--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,20 +56,11 @@
             <div class="socials">
                 <!--Delete any you don't use-->
                 <!--Icons from FontAwesome.com/icons-->
-                <a href="">
-                    <i class="fab fa-twitter"></i>
-                </a>
                 <a href="https://github.com/benjicoopz?tab=repositories" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.linkedin.com/in/benjamin-cooper-50aa6522b/" target="_blank">
                     <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="">
-                    <i class="fab fa-tiktok"></i>
                 </a>
             </div>
             <div class="treehouse">
