--- a/templates/editproject.html
+++ b/templates/editproject.html
@@ -11,10 +11,10 @@
         <label for="date">Completion Date</label>
         <input type="month" name="date" id="date" value="{{ project.date }}">
         <label for="description">Description</label>
-        <textarea name="desc" id="description" cols="30" rows="20" placeholder="Description" value="{{ project.descrip }}" required></textarea>
+        <textarea name="desc" id="description" cols="30" rows="20" placeholder="Description" required>{{ project.descrip }}</textarea>
         <label for="skills-list" id="skills-label">Skills</label>
         <p>Separate each skill by a comma</p>
-        <textarea name="skills" id="skills-list" cols="30" rows="10" placeholder="Skill, Skill" value="{{ project.skills }}" required></textarea>
+        <textarea name="skills" id="skills-list" cols="30" rows="10" placeholder="Skill, Skill" required>{{ project.skills }}</textarea>
         <label for="github">GitHub Link</label>
         <input type="url" name="github" id="github" placeholder="Link to the repo" value="{{ project.ghlink }}" required>
         <div>
